--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "framer-motion": "^7.2.1",
     "lottie-react": "^2.3.1",
+    "moment": "^2.29.4",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
     "react-router-dom": "^5.3.3",
